# internal/domain/server.go
@@ -1,24 +1,52 @@
 package domain
 
-import "time"
+import (
+	"time"
 
-type ServerStatus int
+	v1 "github.com/th1enq/ViettelSMS_ServerService/api/gen/go/server_service/v1"
+)
+
+type ServerStatus string
 
 const (
-	ServerStatusUnknown ServerStatus = iota
-	ServerStatusOnline
-	ServerStatusOffline
+	ServerStatusUnknown ServerStatus = "UNKNOWN"
+	ServerStatusOnline  ServerStatus = "ONLINE"
+	ServerStatusOffline ServerStatus = "OFFLINE"
 )
 
 type Server struct {
 	ServerID     string       `json:"server_id" gorm:"primaryKey;type:varchar(32);not null"`
-	ServerName   string       `json:"server_name" gorm:"type:varchar(64);not null"`
-	Status       ServerStatus `json:"status" gorm:"type:varchar(16);not null"`
+	ServerName   string       `json:"server_name" gorm:"type:varchar(64);not null;unique"`
+	Status       ServerStatus `json:"status" gorm:"type:varchar(16);not null;default:'UNKNOWN'"`
 	IPv4         string       `json:"ipv4" gorm:"type:varchar(15);not null"`
-	Description  string       `json:"description" gorm:"type:text"`
-	Location     string       `json:"location" gorm:"type:varchar(128);not null"`
-	OS           string       `json:"os" gorm:"type:varchar(32);not null"`
+	Location     string       `json:"location" gorm:"type:varchar(128)"`
+	OS           string       `json:"os" gorm:"type:varchar(32)"`
 	IntervalTime uint64       `json:"interval_time" gorm:"type:bigint;not null"`
 	CreatedAt    time.Time    `json:"created_at" gorm:"type:timestamp;not null"`
 	DeletedAt    time.Time    `json:"deleted_at" gorm:"type:timestamp;default:null"`
+}
+
+func DomainToProto(server *Server) *v1.Server {
+	if server == nil {
+		return nil
+	}
+	return &v1.Server{
+		ServerId:          server.ServerID,
+		ServerName:        server.ServerName,
+		Ipv4:              server.IPv4,
+		Location:          server.Location,
+		Os:                server.OS,
+		IntervalCheckTime: server.IntervalTime,
+	}
+}
+
+func DomainToArrayProto(servers []*Server) []*v1.Server {
+	if servers == nil {
+		return nil
+	}
+	var result []*v1.Server
+	for _, server := range servers {
+		result = append(result, DomainToProto(server))
+	}
+	return result
 }
